unpackaged/main/default/objects/Office_Deduction__c/Office_Deduction__c.object-meta.xml
<CustomObject>
    <label>Office Deduction</label>
    <nameField>
        <displayFormat>OD-{000000}</displayFormat>
        <label>Office Deduction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Office Deductions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>