unpackaged/main/default/objects/Office_Deduction__c/fields/Deducted_User__c.field-meta.xml
<CustomField>
    <fullName>Deducted_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deducted User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Office_Deductions</relationshipName>
    <type>Lookup</type>
</CustomField>