unpackaged/main/default/objects/Office_Deduction__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Office Deductions</relationshipLabel>
    <relationshipName>Office_Deductions</relationshipName>
    <type>Lookup</type>
</CustomField>