unpackaged/main/default/objects/Office_Deduction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Deducted_User__c</columns>
    <columns>Amount__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>